<resources>
    <string name="app_name">Khatmah</string>
    <string name="your_progress">YOUR PROGRESS</string>
    <string name="daily_portion">DAILY PORTION</string>
    <string name="Free_Reading">FREE READING</string>
    <string name="action_settings">Setting</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>

    <string name="الحديث" translatable="false">قال رسول الله :\"من قرأ حرفا من كتاب الله فله به حسنة؛ والحسنة بعشر أمثالها؛ لا أقول ألم حرف و لكن ألف حرف و لام حرف وميم حرف\".</string>
    <string name="welcome_message">Welcome to Khatmah app</string>
    <string name="الجزء" translatable="false"> البدء من الجزء الأول</string>
    <string name="مخصص" translatable="false">بداية مخصصة</string>
    <string name="الصفحه" translatable="false">الصفحة</string>
    <string name="الجزء2" translatable="false">الجزء</string>
    <string name="السوره" translatable="false">السورة</string>
    <string name="next" translatable="false">التالي</string>
    <string name="setnum" translatable="false">حدد عدد الصفحات المراد قراءتها في اليوم.</string>
    <string name="setalert" translatable="false">تفعيل التنبيه</string>
    <string name="بسم" translatable="false">بسم اللّه نبدأ</string>
    <string name="pref_previously_started" translatable="false" />

    <string name="conter" translatable="false" />
    <string name="setCounter" translatable="false">Set Counter</string>
    <string name="resetCounter" translatable="false">Reset</string>
    <string name="finishReding" translatable="false">Finish</string>
    <string name="txtWeeklyProgress" translatable="false">Weekly Progress</string>
    <string name="txtWeeklyProgressRatio" translatable="false">" 0 %"</string>
    <string name="txtAllProgress" translatable="false">All Progress</string>
    <string name="txtAllProgressRatio" translatable="false">0 %</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>

    <string name="download">Download</string>
    <string name="download_message">For a better experience, there are some files that must be downloaded in order for the application to work without an Internet connection.</string>

    <string name="portion_completed">If you have finished reading the page, click on the check mark.</string>
    <string name="ok">Okay</string>

    <string name="warning">Warning</string>
    <string name="warning_message">All current data, including the current page number and the number of pages read per day, will be deleted. Do you want to delete data?</string>
    <string name="delete">DELETE</string>
    <string name="reset">RESET</string>
    <string name="cancel">CANCEL</string>
    <string name="daily_portion_completion_message">You have finished reading the entire daily portion</string>
    <string name="page">Page</string>

    <string name="confirmation">Confirmation Message</string>
    <string name="confirmation_message">Have you finished reading the entire daily portion?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="will_be_added_soon">It will be added soon</string>
    <string name="connection_error">Connection error,\nPlease connect to the internet and try again to download the pages of the Holy Qur’an</string>
    <string name="juz">الاجزاء</string>
</resources>