<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".progress.ProgressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:id="@+id/frameLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtWeeklyProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/txtWeeklyProgress"
            android:textColor="#D68B1B"
            android:textColorHint="#D68B1B"
            android:textSize="30sp"/>

        <ProgressBar
            android:id="@+id/weeklyProgressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtWeeklyProgressRatio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentStart="true"
                android:text="@string/txtWeeklyProgressRatio"
                android:textColor="#D68B1B" />

            <TextView
                android:id="@+id/txtWeeklyProgressPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentEnd="true"
                android:text="0 pages"
                android:textColor="#D68B1B" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtAllProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/txtAllProgress"
            android:textColor="#D68B1B"
            android:textSize="30sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/allProgressBar"
                style="@style/DailyPortionProgressBar"
                android:layout_width="156dp"
                android:layout_height="156dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/art" />

            <TextView
                android:id="@+id/txtAllProgressRatio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/txtAllProgressRatio"
                android:textColor="#D68B1B" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/allProgressBar2"
                style="@style/DailyPortionProgressBar"
                android:layout_width="156dp"
                android:layout_height="156dp"
                android:layout_marginTop="16dp"
                android:layout_centerInParent="true"
                android:background="@drawable/art" />

            <TextView
                android:id="@+id/txtAllProgressRatio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/txtAllProgressRatio"
                android:textColor="#D68B1B" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnResetConter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:text="@string/resetCounter" />

            <Button
                android:id="@+id/btnFinishReding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:text="@string/finishReding" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
