<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#102027"
    android:orientation="vertical"
    tools:context=".AlertActivity">

    <TextView
        android:id="@+id/txt_set_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="right"
        android:text="@string/setnum"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinnerJuz"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:backgroundTintMode="multiply"/>
        <Spinner
            android:id="@+id/spinnerPages"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:backgroundTintMode="multiply"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/set_alert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setalert"
            android:gravity="center|right"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/img_alarm"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_round_access_alarm_24" />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="32dp"
        android:textSize="18sp"
        android:textColor="#FFFFFF" />

    <FrameLayout
        android:layout_width="180dp"
        android:layout_height="56dp"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@drawable/input_pg">
        <TextView
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/بسم"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </FrameLayout>

</LinearLayout>